Replace native tray with custom mapped reactions

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <h1>LINKED</h1>
-      <p>Customize LinkedIn reactions</p>
+      <p>Customize LinkedIn reaction tray</p>
 
       <section>
         <label for="emoji">Emoji</label>
@@ -32,8 +32,12 @@
       </section>
 
       <section>
-        <h2>Your Custom Reactions</h2>
+        <h2>Your Custom Tray</h2>
         <ul id="customList"></ul>
+        <div class="row-actions">
+          <button id="exportBtn" class="secondary">Export</button>
+          <button id="importBtn" class="secondary">Import</button>
+        </div>
       </section>
 
       <section>
