Harden LinkedIn-native reaction mapping and tray selectors

--- a/popup.html
+++ b/popup.html
@@ -21,11 +21,11 @@
         <label for="linkedInType">Maps to LinkedIn reaction</label>
         <select id="linkedInType">
           <option value="like">Like</option>
-          <option value="praise">Celebrate</option>
-          <option value="empathy">Support</option>
-          <option value="interest">Love</option>
-          <option value="appreciation">Insightful</option>
-          <option value="maybe">Funny</option>
+          <option value="celebrate">Celebrate</option>
+          <option value="support">Support</option>
+          <option value="love">Love</option>
+          <option value="insightful">Insightful</option>
+          <option value="funny">Funny</option>
         </select>
 
         <button id="addBtn">Add Custom Reaction</button>
