Add reaction pack management and active-pack rendering

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,17 @@
         <span class="hero-badge">STUDIO</span>
       </header>
 
+      <section class="card">
+        <h2>Reaction Packs</h2>
+        <label for="packSelect">Active Pack</label>
+        <select id="packSelect"></select>
+        <div class="row-actions">
+          <button id="newPackBtn" type="button">New Pack</button>
+          <button id="dupPackBtn" class="secondary" type="button">Duplicate</button>
+          <button id="delPackBtn" class="danger" type="button">Delete</button>
+        </div>
+      </section>
+
       <section class="card card-accent">
         <h2>Create Reaction</h2>
 
