Add pack rename, thumbnails, and pro starter set

--- a/popup.html
+++ b/popup.html
@@ -23,8 +23,10 @@
         <div class="row-actions">
           <button id="newPackBtn" type="button">New Pack</button>
           <button id="dupPackBtn" class="secondary" type="button">Duplicate</button>
+          <button id="renamePackBtn" class="secondary" type="button">Rename</button>
           <button id="delPackBtn" class="danger" type="button">Delete</button>
         </div>
+        <div id="packMeta" class="pack-meta"></div>
       </section>
 
       <section class="card card-accent">
@@ -76,6 +78,13 @@
 
         <button id="addBtn" type="button">Add Custom Reaction</button>
         <p id="formFeedback" class="feedback" aria-live="polite"></p>
+      </section>
+
+      <section class="card">
+        <h2>Quick Professional Sets</h2>
+        <div class="row-actions">
+          <button id="proSetBtn" class="secondary" type="button">Build Pro Set</button>
+        </div>
       </section>
 
       <section class="card">
