Add OpenMoji catalog CLI and attribution wiring

--- a/popup.html
+++ b/popup.html
@@ -36,6 +36,7 @@
         <label for="catalogCategory">Category</label>
         <select id="catalogCategory"></select>
         <div id="catalogGrid" class="catalog-grid"></div>
+        <p id="catalogAttribution" class="catalog-attribution"></p>
       </section>
 
       <section class="card card-accent">
