Import OpenMoji assets into Linked

--- a/popup.html
+++ b/popup.html
@@ -91,13 +91,6 @@
       </section>
 
       <section class="card">
-        <h2>Quick Professional Sets</h2>
-        <div class="row-actions">
-          <button id="proSetBtn" class="secondary" type="button">Build Pro Set</button>
-        </div>
-      </section>
-
-      <section class="card">
         <h2>Live Tray Preview</h2>
         <div id="previewTray" class="preview-tray"></div>
       </section>
@@ -105,10 +98,6 @@
       <section class="card">
         <h2>Your Custom Tray</h2>
         <ul id="customList"></ul>
-        <div class="row-actions">
-          <button id="exportBtn" class="secondary" type="button">Export</button>
-          <button id="importBtn" class="secondary" type="button">Import</button>
-        </div>
       </section>
 
       <section class="card">
@@ -116,7 +105,7 @@
         <div id="builtinToggles"></div>
       </section>
 
-      <p class="note">Reload LinkedIn tabs after updating settings.</p>
+      <p class="note">Changes auto-apply on open LinkedIn tabs.</p>
     </main>
 
     <script src="reaction-catalog.js"></script>
