Build sticker reaction mapping

--- a/popup.html
+++ b/popup.html
@@ -76,6 +76,7 @@
           <option value="funny">Funny</option>
         </select>
 
+        <button id="mapCatalogBtn" class="secondary" type="button">Map Selected Sticker/Emoji + Add</button>
         <button id="addBtn" type="button">Add Custom Reaction</button>
         <p id="formFeedback" class="feedback" aria-live="polite"></p>
       </section>
