Decide custom reaction sync approach

--- a/popup.html
+++ b/popup.html
@@ -96,6 +96,18 @@
         <div id="builtinToggles"></div>
       </section>
 
+      <section class="card">
+        <h2>Sync Channels</h2>
+        <label class="toggle-row" for="signatureSyncEnabled">
+          <span>Enable Signature Sync</span>
+          <input id="signatureSyncEnabled" type="checkbox" />
+        </label>
+        <label class="toggle-row" for="signatureAutoDraft">
+          <span>Auto-draft signature comment</span>
+          <input id="signatureAutoDraft" type="checkbox" />
+        </label>
+      </section>
+
       <p class="note">Changes auto-apply on open LinkedIn tabs.</p>
     </main>
 
